to fdupes. Every item on the list includes, inside square brackets,
a list of indentifiers referring to the people who contributed
that particular item. When more than one person is listed the person
who contributed the patch or idea appears first, followed by
those who've otherwise worked on that item. For a list of
contributors names and identifiers please see the CONTRIBUTORS file.

Changes from 1.51-jody5 to 2.0 [JLB]

- Bumped major version to 2.0 due to the number of behavioral changes
  and improvements to the code, plus it looks less messy than the
  hyphenated versioning
- Increased "chunk size" for better performance and to solve the disk
  thrashing problem when checking two large files for a match
- When using the -H option, hard links now automatically match each
  other without performing any file reads
- Changed primary memory allocator to string_alloc by Jody Bruchon
  to improve performance over generic malloc/calloc
- Progress indicator now lists the number of duplicate pairs found in
  addition to the usual file progress count and completion percentage
- Progress is updated more rapidly when full file comparisons happen
  so users are less likely to think fdupes is "frozen"
- Floating point code was made optional and is removed by default
- A comparison script was added to check built fdupes behavior against
  whatever fdupes is currently installed on the system
- Added "undocumented" -Q / --quick option which is not fully safe but can
  be used to drastically reduce run time for large data sets if some risk
  of data loss is acceptable to the user
- Added -O/--paramorder option to sort files by the order their parent
  directory set was specified on the command line first. This makes it
  possible to choose what directories' files get preserved over others
  while using -d and -N together
- The file list loading progress indicator was revamped. Rather than a
  simple "spinning pipe" indicator, it now shows the number of files and